# tractor-converter

./: CMakeLists.txt  LICENSE  README.md
docs/common/2d_end_screen/: end_screens.ods
docs/common/2d_item/: items.ods
docs/common/2d_item_preview/: items.ods  mechos.ods
docs/common/3d/: 3d_models.ods
docs/common/3d/materials_table/: Ark-a-Znoy.html  Boozeena.html  Fostral_Eleerection.html  Fostral_Gulp-down.html  Fostral_Plump-up.html  Fostral_dead.html  Glorx_Election_of_Castaways.html  Glorx_Heroism.html  Glorx_Progress.html  Glorx_dead.html  Khox.html  Necross_December.html  Necross_Saturday.html  Necross_Spring.html  Necross_dead.html  Threall.html  Threall_dead.html  Weexow.html  Xplo.html  Xplo_dead.html  hMok.html
docs/en/: 2d_end_screen.html  2d_item.html  2d_item_preview.html  3d.html
docs/ru/: 2d_end_screen.html  2d_item.html  2d_item_preview.html  3d.html  index.html
gimp_scripts/: index_png.scm
lib/: CMakeLists.txt
lib/alphanum/: CMakeLists.txt  alphanum.cpp  alphanum.hpp
lib/tinyobjloader/: CMakeLists.txt  tiny_obj_loader.h
lib/volInt/: CMakeLists.txt  volInt.cpp  volInt.hpp
release_files/configs/2d_end_screen/add_font_palette/: tga_merge_unused_pal.cfg
release_files/configs/2d_end_screen/get_tga_screens/: bmp_to_tga.cfg  remove_not_used_pal.cfg  usage_pal.cfg  vangers_pal_to_tga_pal.cfg
release_files/configs/2d_end_screen/tga_to_bmp/: extract_tga_pal.cfg  tga_pal_to_vangers_pal.cfg  tga_to_bmp.cfg
release_files/configs/2d_item/bmp_to_tga/: bmp_to_tga.cfg
release_files/configs/2d_item/tga_to_bmp/: tga_to_bmp.cfg
release_files/default_resources/2d_item/: items_outside.pal  outside-escave_map
release_files/default_resources/3d/mtl/: ark-a-znoy.mtl  boozeena.mtl  fostral_dead.mtl  fostral_eleerection.mtl  fostral_gulp-down.mtl  fostral_plump-up.mtl  glorx_dead.mtl  glorx_election_of_castaways.mtl  glorx_heroism.mtl  glorx_progress.mtl  hmok.mtl  khox.mtl  necross_dead.mtl  necross_december.mtl  necross_saturday.mtl  necross_spring.mtl  threall.mtl  threall_dead.mtl  weexow.mtl  xplo.mtl  xplo_dead.mtl
release_files/docs/common/2d_item/: items.ods
release_files/docs/common/2d_item_preview/: items.ods  mechos.ods
release_files/docs/common/3d/: 3d_models.ods
release_files/docs/common/3d/materials_table/: ark-a-znoy.html  boozeena.html  fostral_dead.html  fostral_eleerection.html  (+17 more)
release_files/docs/en/: 2d_end_screen.html  2d_item.html  2d_item_preview.html  3d.html  index.html
release_files/docs/ru/: 2d_end_screen.html  2d_item.html  2d_item_preview.html  3d.html
release_files/gimp_scripts/: gimprc_unix  gimprc_windows
release_files/modes_unix/: path_to_vangers_data_dir.sh
release_files/modes_unix/2d_end_screen/: add_font_palette.sh  get_tga_screens.sh  tga_to_bmp.sh
release_files/modes_unix/2d_item/: bmp_to_tga.sh  tga_to_bmp.sh
release_files/modes_unix/2d_item_preview/: to_preview_avi.sh
release_files/modes_unix/3d/: m3d_to_obj.cfg  m3d_to_obj.sh  obj_to_m3d.cfg  obj_to_m3d.sh
release_files/modes_windows/: path_to_vangers_data_dir.bat
release_files/modes_windows/2d_end_screen/: add_font_palette.bat  get_tga_screens.bat  tga_to_bmp.bat
release_files/modes_windows/2d_item/: bmp_to_tga.bat  tga_to_bmp.bat
release_files/modes_windows/2d_item_preview/: to_preview_avi.bat
release_files/modes_windows/3d/: m3d_to_obj.bat  m3d_to_obj.cfg  obj_to_m3d.bat  obj_to_m3d.cfg
release_files/raw_world_palettes/: ark-a-znoy.pal  boozeena.pal  fostral_dead.pal  fostral_eleerection.pal  fostral_gulp-down.pal  fostral_plump-up.pal  glorx_dead.pal  glorx_election_of_castaways.pal  glorx_heroism.pal  glorx_progress.pal  hmok.pal  khox.pal  necross_dead.pal  necross_december.pal  necross_saturday.pal  necross_spring.pal  threall.pal  threall_dead.pal  weexow.pal  xplo.pal  xplo_dead.pal
src/: CMakeLists.txt
src/get_options/: get_options.cpp  get_options.hpp
src/helpers/: bitflag.cpp  bitflag.hpp  check_option.cpp  check_option.hpp  check_pal_color_used.cpp  check_pal_color_used.hpp  file_operations.cpp  file_operations.hpp  get_option.cpp  get_option.hpp  hex.cpp  hex.hpp  m3d_to_wavefront_obj_operations.cpp  m3d_to_wavefront_obj_operations.hpp  parse_mtl_body_offs.cpp  parse_mtl_body_offs.hpp  raw_num_operations.cpp  raw_num_operations.hpp  tga_class.cpp  tga_class.hpp  tga_constants.hpp  to_string_precision.cpp  to_string_precision.hpp  vangers_3d_model_constants.hpp  vangers_3d_model_operations.cpp  vangers_3d_model_operations.hpp  vangers_cfg_operations.cpp  vangers_cfg_operations.hpp  wavefront_obj_constants.hpp  wavefront_obj_operations.cpp  wavefront_obj_operations.hpp  wavefront_obj_to_m3d_operations.cpp  wavefront_obj_to_m3d_operations.hpp
src/main/: defines.hpp  main.cpp  main.hpp
src/modes/bmp_to_tga/: bmp_to_tga.cpp  bmp_to_tga.hpp
src/modes/compare_bmp_escave_outside/: compare_bmp_escave_outside.cpp  compare_bmp_escave_outside.hpp
src/modes/create_materials_table/: create_materials_table.cpp  create_materials_table.hpp
src/modes/create_wavefront_mtl/: create_wavefront_mtl.cpp  create_wavefront_mtl.hpp
src/modes/extract_tga_pal/: extract_tga_pal.cpp  extract_tga_pal.hpp
src/modes/obj_to_vangers_3d_model/: obj_to_vangers_3d_model.cpp  obj_to_vangers_3d_model.hpp
src/modes/pal_shift_for_vangers_avi/: pal_shift_for_vangers_avi.cpp  pal_shift_for_vangers_avi.hpp
src/modes/remove_not_used_pal/: remove_not_used_pal.cpp  remove_not_used_pal.hpp
src/modes/tga_merge_unused_pal/: tga_merge_unused_pal.cpp  tga_merge_unused_pal.hpp
src/modes/tga_replace_pal/: tga_replace_pal.cpp  tga_replace_pal.hpp
src/modes/tga_to_bmp/: tga_to_bmp.cpp  tga_to_bmp.hpp
src/modes/usage_pal/: usage_pal.cpp  usage_pal.hpp
src/modes/vangers_3d_model_to_obj/: vangers_3d_model_to_obj.cpp  vangers_3d_model_to_obj.hpp
src/modes/vangers_pal_to_tga_pal/: vangers_pal_to_tga_pal.cpp  vangers_pal_to_tga_pal.hpp
