cmake_minimum_required(VERSION 2.8.12)

if(APPLE OR (${CMAKE_SYSTEM_NAME} MATCHES "Darwin"))
  set(CMAKE_INSTALL_RPATH "@executable_path/")
else(APPLE OR (${CMAKE_SYSTEM_NAME} MATCHES "Darwin"))
  set(CMAKE_INSTALL_RPATH "$ORIGIN")
endif(APPLE OR (${CMAKE_SYSTEM_NAME} MATCHES "Darwin"))


project(TRACTOR_CONVERTER
        LANGUAGES CXX)



set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)



ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
